"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2012-09-27	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-49:
	  vpi-prsim: revert most of previous patch, 
		both pieces found to crash larger cosim tests.  :(
		Keeping stop_on_vacuous_events.


	* HACKT-00-01-04-main-00-86-48:
	  vpi-prsim: re-wrote scheduling of callback events to NOT
		poll every single time unit, but advance by a conservative 
		time difference until next event.  Should be faster!
		Also stops on vacuous events, to make it easier to 
		determine proper callback time, otherwise can result
		in overrrun and schedule-in-past error.


2012-09-26	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-47:
	  hacprsim: new 'set-now' command to set node to value
		immediately without having to go through event queue.
		Documented, test cases added.
	  Added support for stopping step() on vacuous events in the queue,
		which is off by default, but may be needed for VPI-prsim.


2012-09-18	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-46:
	  util/ChangeLog: fix IO_utils.cc:read_string() typo.


2012-09-10	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-45:
	  vpi-prsim: $to_prsim() warns if signal will be driven by
		production rules and verilog (possible conflict).
		Test case added.


2012-08-20	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-44c:
	  hacprsim: pass rule pointer w/ rule_index to avoid lookup_rule(),
		resulting in 3% speedup.  Event struct increased in size
		by 1 pointer, affects memory stats in a few tests.


2012-08-16	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-44b:
	  hacprsim: pool-allocated set<index> brings another 2-3% speedup.


	* HACKT-00-01-04-main-00-86-44: