@@ -19,8 +19,8 @@ prsim:	10	L.d[0] : 0
 prsim:	10	L.d[1] : 0
 prsim:	10	R.e : 1
 prsim:	20	R.d[0] : 0
-prsim:	21	R.d[1] : 0
-prsim:	22	L.e : 1
+prsim:	20	R.d[1] : 0
+prsim:	20	L.e : 1
 # channel-release-all 
 channel	L (.data) : 0
 prsim:	1010	L.d[0] : 1
