@@ -3,6 +3,15 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "cvstag.h" for version identification.
 
+2012-10-01	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-86-49:
+	  vpi-prsim.cc: __advance_prsim, keep executing events at the 
+		same time to accumulate multiple to-vcs breakpoints.
+		This re-enables setting-node-immediately (bypassing
+			event queue) to work with cosim.
+
+
 2012-09-27	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-86-49:
